# CobolSystemMigration

./: .env.example  .gitignore  Dockerfile.backend  README.md  docker-compose.yml  pyproject.toml
backend/: cli.py  config.py  main.py
backend/api/: models.py
backend/api/routes/: health.py  migrations.py  projects.py  schema.py  validation.py
backend/core/analyzer/: ir_nodes.py  schema_analyzer.py
backend/core/decoder/: comp3_decoder.py  comp_decoder.py  date_normalizer.py  ebcdic_decoder.py  record_decoder.py
backend/core/generator/: ddl_generator.py
backend/core/loader/: pg_loader.py  sqlserver_loader.py
backend/core/parser/: ast_nodes.py  cobol_parser.py  layout_calculator.py  preprocessor.py
backend/core/pipeline/: extraction.py
backend/core/pipeline/readers/: fixed_reader.py  variable_reader.py
backend/core/state/: tracker.py
backend/db/: connection.py  models.py
backend/workers/: celery_app.py  tasks.py
docs/: APP_PLAN.md
frontend/: package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/migrations/: page.tsx
frontend/src/app/migrations/[id]/: page.tsx
frontend/src/app/projects/: page.tsx
frontend/src/app/projects/[id]/: page.tsx
frontend/src/app/projects/new/: page.tsx
frontend/src/app/schema/: page.tsx
frontend/src/components/features/migrations/: status-badge.tsx
frontend/src/components/layout/: sidebar.tsx
frontend/src/lib/: api.ts
tests/: conftest.py  test_cobol_parser.py  test_comp3_decoder.py  test_date_normalizer.py  test_ddl_generator.py  test_layout_calculator.py  test_schema_analyzer.py
